[package]
name = "rust-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
regex = "1"
llm = { version = "1.3.7", default-features = false, features = ["google", "rustls-tls"] }
dotenvy = "0.15"
